--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "mlutils"
 version = "0.1.0"
 description = "A small utility toolkit for experiment management, logging, timing, and reproducibility."
 authors = [
-    { name = "Ramon Winterhalder" },
+    { name = "Ramon Winterhalder", email = "ramon.winterhalder@unimi.it" },
 ]
 readme = "README.md"
 requires-python = ">=3.7"
-dependencies = []
-
-[build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
+dependencies = ["numpy", "torch"]
